--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             color:red;
             background-color: yellow;
         }
+        p:hover{
+            background-color: yellow;
+        }
     </style>
 </head>
 <body>
