--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index.html</title>
+    <style>
+        h1{
+            color:red;
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <h1>인덱스 페이지 입니다.</h1>
